# tq-vllm

./: .containerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  ROADMAP.md  vllm_integration.md
docs/research/: technical-flash-attention-fusion-turboquant-kv-cache-research-2026-03-26.md  technical-fused-turboquant-triton-kernel-research-2026-03-25.md  technical-google-turboquant-research-2026-03-25.md  technical-triton-flash-attention-tutorial-deep-dive-2026-03-26.md
experiments/: experiment_007_e2e_amd_validation.py  experiment_008_triton_fused_rocm.py  experiment_009_triton_fa_e2e_validation.py  experiment_018_cuda_graph_decode_latency.py  experiment_022_clip_duration_comparison.py
experiments/logs/: experiment-001-initial-validation.md  experiment-002-mse-fix-validation.md  experiment-003-compressed-vram.json  experiment-003-compressed-vram.md  experiment-006-amd-rocm-gfx1150.md  experiment-007-e2e-amd-validation.json  experiment-007-e2e-amd-validation.md  experiment-008-triton-fused-rocm.md  experiment-009-triton-fa-e2e.json  experiment-018-smoke-test.json  experiment-019-fused-paged-hbm-traffic.json  experiment-019-fused-paged-hbm-traffic.md  experiment-022-baseline-4b.json  experiment-022-baseline-simple-prompt.json  experiment-022-baseline.json  experiment-022-findings.md  experiment-022-tq4-4096.json  experiment-022-tq4-4b-v121.json  experiment-022-tq4-4b-v122.json  experiment-022-tq4-4b.json  experiment-022-tq4-8b-v122.json  experiment-022-tq4-retry.json  experiment-022-tq4-simple-prompt.json  experiment-022-tq4-v121.json  experiment-022-tq4.json  run-001-text-only-4b.json  run-002-mse-fix-4b.json  run-003-video-4b.json
infra/: Containerfile.rocm  run-rocm.sh
src/turboquant_consumer/: __init__.py  benchmark.py  compressors.py  kv_cache.py  lloyd_max.py  quantizer.py
src/turboquant_consumer/triton/: __init__.py  flash_attention.py  fused_qk_attention.py  molmo2_integration.py
src/turboquant_vllm/: verify.py
src/turboquant_vllm/triton/: fused_paged_tq4_attention.py
src/turboquant_vllm/vllm/: __init__.py  tq4_backend.py  tq4_flashinfer_backend.py  tq4_triton_backend.py
tests/: conftest.py  test_compressors.py  test_flash_attention.py  test_flash_attention_tq4.py  test_flash_attention_tq4_kv.py  test_kv_cache.py  test_kv_cache_nibble.py  test_lloyd_max.py  test_model_regression.py  test_per_layer_cosine.py  test_quantizer.py  test_tq4_flashinfer_backend.py  test_tq4_triton_backend.py  test_verify.py  test_vllm_cache.py  test_vllm_fused_gating.py  test_vllm_registration.py  test_vllm_triton_equivalence.py
